5: Integrated Glide and started loading images

--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/ivNews"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         android:contentDescription="News Image"
         app:layout_constraintEnd_toEndOf="parent"
